lower opacity for forecasts

--- a/notebooks/01_interest_rates.ipynb
+++ b/notebooks/01_interest_rates.ipynb
@@ -1771,9 +1771,9 @@
     "plt.xticks(rotation=45)\n",
     "\n",
     "plt.subplot(222)\n",
-    "plt.plot(df.time, df['EquityReturn_post'])\n",
+    "plt.plot(df.time, 100 * df['EquityReturn_post'])\n",
     "plt.xlabel('Year')\n",
-    "plt.ylabel('Return')\n",
+    "plt.ylabel('Return (%)')\n",
     "plt.title('Return on Equity')\n",
     "plt.xticks(rotation=45)\n",
     "\n",
@@ -1858,7 +1858,7 @@
     "ax.set_xticklabels(labels=ax.get_xticks(), rotation=45)\n",
     "ax.xaxis.set_major_formatter(mdates.DateFormatter('%Y'))\n",
     "ax.set_ylabel('Percent')\n",
-    "ax.set_title('roll')\n",
+    "ax.set_title('Rolling')\n",
     "\n",
     "ax = plt.subplot(223)\n",
     "ax.plot(focus.time, 100*focus['lending_post'], label='Lending Rate', **opt)\n",
@@ -1877,7 +1877,9 @@
     "ax.legend((lending, mmarket, treasury, deposit), ('Lending', 'Money Market', 'Treasury', 'Deposit'), \n",
     "          loc='upper left')\n",
     "\n",
-    "plt.tight_layout()"
+    "plt.tight_layout()\n",
+    "\n",
+    "plt.savefig('../fig/mpc_real_rates.png', dpi = 300)"
    ]
   },
   {
@@ -1941,7 +1943,9 @@
     "ax.set_title('Nominal Interest Rates')\n",
     "ax.legend()\n",
     "\n",
-    "plt.tight_layout()"
+    "plt.tight_layout()\n",
+    "\n",
+    "plt.savefig('../fig/mpc_nominal_rates.png', dpi=300)"
    ]
   },
   {
@@ -2022,7 +2026,9 @@
     "ax.legend((lending, mmarket, treasury, deposit), ('Lending', 'Money Market', 'Treasury', 'Deposit'), \n",
     "          loc='upper left')\n",
     "\n",
-    "plt.tight_layout()"
+    "plt.tight_layout()\n",
+    "\n",
+    "plt.savefig('../fig/gfc_interestrates.png', dpi=300)"
    ]
   }
  ],
