updated comments in interest rates notebook

--- a/notebooks/01_interest_rates.ipynb
+++ b/notebooks/01_interest_rates.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
        "[130 rows x 7 columns]"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
        "9  0.012531  1959  2"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +643,7 @@
        "[129 rows x 11 columns]"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -699,8 +699,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inflation measures"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -828,16 +835,20 @@
        "10            0.959196  0.056512  0.074653 -0.024916  1.025553  "
       ]
      },
-     "execution_count": 126,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# gross inflation over four periods\n",
     "cpi['pi_tp1_gross'] = cpi.cpi / cpi.cpi.shift(4)\n",
     "cpi['inv_pi_tp1_gross'] = 1 / cpi['pi_tp1_gross']\n",
+    "\n",
+    "# raw inflation\n",
     "cpi['pi'] = cpi['pi_tp1_gross'] - 1\n",
     "\n",
+    "# regression method- regess the inverse of inflation on two lags \n",
     "pimodel = sm.ols(\n",
     "   formula='inv_pi_tp1_gross ~ 1 + inv_pi_tp1_gross.shift(1) + inv_pi_tp1_gross.shift(2)' ,\n",
     "   data=cpi\n",
@@ -845,14 +856,20 @@
     "cpi_fit = pimodel.fit()\n",
     "cpi_fit.summary()\n",
     "\n",
+    "# the expected inflation is the fitted values of that regression\n",
     "E_inv_pi_tp1_gross = cpi_fit.fittedvalues\n",
     "E_inv_pi_tp1_gross.name = 'E_inv_pi_tp1_gross'\n",
     "#cpi = pd.concat([cpi, E_inv_pi_tp1_gross], axis=1)\n",
     "cpi = cpi.merge(E_inv_pi_tp1_gross, left_index=True, right_index=True)\n",
+    "\n",
+    "# four period average of inflation\n",
     "cpi['E4_pi'] = (cpi['pi'].shift(1) + cpi['pi'].shift(2) + cpi['pi'].shift(3) + cpi['pi'].shift(4))/4\n",
     "\n",
+    "# ex post inflation\n",
     "cpi['pi_post'] = (cpi.cpi.shift(-4) / cpi.cpi) - 1\n",
     "cpi['pi_pre'] = (cpi.cpi.shift(4) / cpi.cpi) - 1\n",
+    "\n",
+    "# ex post gross inflation\n",
     "cpi['Pi'] = cpi['cpi'] / cpi['cpi'].shift(4)\n",
     "\n",
     "cpi.head()"
@@ -860,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -871,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -887,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -897,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -940,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -1119,7 +1136,7 @@
        "[377 rows x 7 columns]"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1131,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -1250,7 +1267,7 @@
        "9  1  1994  2593.033284      0.564708"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1272,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -1757,7 +1774,7 @@
        "[15 rows x 35 columns]"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1773,7 +1790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -1823,7 +1840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -1918,7 +1935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -1984,7 +2001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
