add decline in GDP relative to trend metric

--- a/notebooks/02_forecasting.ipynb
+++ b/notebooks/02_forecasting.ipynb
@@ -19,18 +19,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/mitch/envs/main/lib/python3.9/site-packages/urllib3/__init__.py:34: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -55,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +165,7 @@
        "[175 rows x 2 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +282,7 @@
        "[175 rows x 2 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +399,7 @@
        "[175 rows x 2 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +516,7 @@
        "[175 rows x 2 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +633,7 @@
        "[175 rows x 2 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +712,7 @@
        "       [<Axes: >, <Axes: >]], dtype=object)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -742,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -857,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -906,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1001,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1063,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1078,10 +1069,10 @@
        "  <th>Model:</th>           <td>SARIMAX(3, 0, 0)</td> <th>  Log Likelihood     </th> <td>-89.438</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>            <td>Fri, 09 Feb 2024</td> <th>  AIC                </th> <td>188.876</td>\n",
+       "  <th>Date:</th>            <td>Wed, 21 Feb 2024</td> <th>  AIC                </th> <td>188.876</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                <td>17:50:31</td>     <th>  BIC                </th> <td>198.632</td>\n",
+       "  <th>Time:</th>                <td>13:09:46</td>     <th>  BIC                </th> <td>198.632</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>Sample:</th>                  <td>0</td>        <th>  HQIC               </th> <td>192.616</td>\n",
@@ -1134,8 +1125,8 @@
        "\\toprule\n",
        "\\textbf{Dep. Variable:}          &        y         & \\textbf{  No. Observations:  } &     52      \\\\\n",
        "\\textbf{Model:}                  & SARIMAX(3, 0, 0) & \\textbf{  Log Likelihood     } &  -89.438    \\\\\n",
-       "\\textbf{Date:}                   & Fri, 09 Feb 2024 & \\textbf{  AIC                } &  188.876    \\\\\n",
-       "\\textbf{Time:}                   &     17:50:31     & \\textbf{  BIC                } &  198.632    \\\\\n",
+       "\\textbf{Date:}                   & Wed, 21 Feb 2024 & \\textbf{  AIC                } &  188.876    \\\\\n",
+       "\\textbf{Time:}                   &     13:09:46     & \\textbf{  BIC                } &  198.632    \\\\\n",
        "\\textbf{Sample:}                 &        0         & \\textbf{  HQIC               } &  192.616    \\\\\n",
        "\\textbf{}                        &       - 52       & \\textbf{                     } &             \\\\\n",
        "\\textbf{Covariance Type:}        &       opg        & \\textbf{                     } &             \\\\\n",
@@ -1171,8 +1162,8 @@
        "==============================================================================\n",
        "Dep. Variable:                      y   No. Observations:                   52\n",
        "Model:               SARIMAX(3, 0, 0)   Log Likelihood                 -89.438\n",
-       "Date:                Fri, 09 Feb 2024   AIC                            188.876\n",
-       "Time:                        17:50:31   BIC                            198.632\n",
+       "Date:                Wed, 21 Feb 2024   AIC                            188.876\n",
+       "Time:                        13:09:46   BIC                            198.632\n",
        "Sample:                             0   HQIC                           192.616\n",
        "                                 - 52                                         \n",
        "Covariance Type:                  opg                                         \n",
@@ -1196,7 +1187,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 20,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1223,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1239,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1304,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1332,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1398,6 +1389,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Change from Trend"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss in GDP: 1.51\n",
+      "Loss in C: 1.64\n"
+     ]
+    }
+   ],
+   "source": [
+    "post_recession = df.query('date >= 2010').query('date <= 2016')\n",
+    "realized_GDP = post_recession['GDP']\n",
+    "predicted_GDP = pred['GDP'][post_recession['GDP'].index]\n",
+    "loss = 1- np.mean(realized_GDP / predicted_GDP)\n",
+    "print('Loss in GDP:', round(100*loss, 2))\n",
+    "\n",
+    "post_recession = df.query('date >= 2010').query('date <= 2016')\n",
+    "realized_C = post_recession['C']\n",
+    "predicted_C = pred['C'][post_recession['C'].index]\n",
+    "loss = 1- np.mean(realized_C / predicted_C)\n",
+    "print('Loss in C:', round(100*loss, 2))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Covid 19 Crisis"
    ]
   },
@@ -1412,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1428,7 +1454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1494,7 +1520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1519,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1534,10 +1560,10 @@
        "  <th>Model:</th>           <td>SARIMAX(1, 1, 0)</td> <th>  Log Likelihood     </th> <td>-50.474</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>            <td>Fri, 09 Feb 2024</td> <th>  AIC                </th> <td>106.948</td>\n",
+       "  <th>Date:</th>            <td>Wed, 21 Feb 2024</td> <th>  AIC                </th> <td>106.948</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                <td>17:50:35</td>     <th>  BIC                </th> <td>116.098</td>\n",
+       "  <th>Time:</th>                <td>13:09:50</td>     <th>  BIC                </th> <td>116.098</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>Sample:</th>                  <td>0</td>        <th>  HQIC               </th> <td>110.664</td>\n",
@@ -1584,8 +1610,8 @@
        "\\toprule\n",
        "\\textbf{Dep. Variable:}          &        y         & \\textbf{  No. Observations:  } &    157      \\\\\n",
        "\\textbf{Model:}                  & SARIMAX(1, 1, 0) & \\textbf{  Log Likelihood     } &  -50.474    \\\\\n",
-       "\\textbf{Date:}                   & Fri, 09 Feb 2024 & \\textbf{  AIC                } &  106.948    \\\\\n",
-       "\\textbf{Time:}                   &     17:50:35     & \\textbf{  BIC                } &  116.098    \\\\\n",
+       "\\textbf{Date:}                   & Wed, 21 Feb 2024 & \\textbf{  AIC                } &  106.948    \\\\\n",
+       "\\textbf{Time:}                   &     13:09:50     & \\textbf{  BIC                } &  116.098    \\\\\n",
        "\\textbf{Sample:}                 &        0         & \\textbf{  HQIC               } &  110.664    \\\\\n",
        "\\textbf{}                        &       - 157      & \\textbf{                     } &             \\\\\n",
        "\\textbf{Covariance Type:}        &       opg        & \\textbf{                     } &             \\\\\n",
@@ -1619,8 +1645,8 @@
        "==============================================================================\n",
        "Dep. Variable:                      y   No. Observations:                  157\n",
        "Model:               SARIMAX(1, 1, 0)   Log Likelihood                 -50.474\n",
-       "Date:                Fri, 09 Feb 2024   AIC                            106.948\n",
-       "Time:                        17:50:35   BIC                            116.098\n",
+       "Date:                Wed, 21 Feb 2024   AIC                            106.948\n",
+       "Time:                        13:09:50   BIC                            116.098\n",
        "Sample:                             0   HQIC                           110.664\n",
        "                                - 157                                         \n",
        "Covariance Type:                  opg                                         \n",
@@ -1642,7 +1668,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 28,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1653,7 +1679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1674,7 +1700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1734,6 +1760,41 @@
     "plt.tight_layout()\n",
     "\n",
     "plt.savefig('../fig/covid19_arima.png', dpi=300)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Decline in GDP and Consumption"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss in GDP: 1.6\n",
+      "Loss in C: 1.19\n"
+     ]
+    }
+   ],
+   "source": [
+    "post_recession = df.query('date >= 2021')\n",
+    "realized_GDP = post_recession['GDP']\n",
+    "predicted_GDP = pred['GDP'][post_recession['GDP'].index]\n",
+    "loss = 1- np.mean(realized_GDP / predicted_GDP)\n",
+    "print('Loss in GDP:', round(100*loss, 2))\n",
+    "\n",
+    "post_recession = df.query('date >= 2021')\n",
+    "realized_C = post_recession['C']\n",
+    "predicted_C = pred['C'][post_recession['C'].index]\n",
+    "loss = 1- np.mean(realized_C / predicted_C)\n",
+    "print('Loss in C:', round(100*loss, 2))\n"
    ]
   }
  ],
